# data_preprocesser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  documentation.md  feature.yaml  feature.yml  general_report.md  task.yaml
.github/PULL_REQUEST_TEMPLATE/: bug.md  feature.md  task.md
.github/WORKFLOWS/: smoke_test.yaml
.github/workflows/: smoke_test.yaml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
settings/: sources.yaml
src/data_preprocessor/: __main__.py
tests/: test_data_preprocessor.py
